<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>
    <string name="emailAddress">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_account_creation">Create New Account</string>
    <string name="accoutCreateName">Name</string>
    <string name="accountCreateEmail">Email Address</string>
    <string name="accountCreatePassword">Password</string>
    <string name="createNewAccount">Create Account</string>
    <string name="blankField">Field Is Blank</string>
    <string name="blankUserNameToast">Name Cannot Be Blank</string>
    <string name="blankEmailToast">Email Address Cannot Be Blank</string>
    <string name="blankPasswordToast">Password Cannot Be Blank</string>
    <string name="invalidUserEmail">Invalid Email Address</string>
    <string name="emailInUse">Email In Use</string>
    <string name="emailInUseToast">Email Address is already linked to account.</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="accountNotFound">Account Not Found</string>
    <string name="accountNotFoundToast">Email Address or Password is incorrect. Please try again.</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="enterEmailAddress">Please Enter Your Email Address Below.\nAn email will be sent with instructions to\nreset your password.</string>
    <string name="forgotPasswordSubmit">Submit</string>
    <string name="createProjectName">Project Name</string>
    <string name="createProjectDescription">Description</string>
    <string name="createProjectDueDate">Due Date</string>
    <string name="createProjectDueTime">Time</string>
    <string name="createProjectButton">Submit</string>
    <string name="createProjectUID">Unique Identifier</string>
    <string name="createProjectPassword">Password</string>
    <string name="duplicateUIDError">UID already exists</string>
    <string name="duplicateUIDErrorToast">This UID already exists. Please choose another one.</string>
    <string name="joinProjectUID">Unique Identifier</string>
    <string name="joinProjectPassword">Password</string>
    <string name="joinProjectSubmitButton">Join Project</string>
    <string name="joinProjectNotFound">Project Not Found</string>
    <string name="joinProjectNotFoundToast">Project Not Found. Please check the UID or the password.</string>
    <string name="myProjectsLoad">Loading Projects\nPlease wait&#8230;</string>
    <string name="myProjectsNone">No Projects Found.\nPlease create or join a project.</string>
    <string name="myProjectsEditButton">Edit</string>
    <string name="title_activity_edit_project">Edit Project</string>
    <string name="editProjectName">Project Name</string>
    <string name="editProjectDescription">Description</string>
    <string name="editProjectDueDate">Due Date</string>
    <string name="editProjectDueTime">Due Time</string>
    <string name="editProjectButton">Update</string>
    <string name="editProjectPassword">Password</string>
    <string name="editProjectUID">Unique Identifier</string>
    <string name="title_activity_project_home_screen">Project HomeScreen</string>
    <string name="projectTasksLoad">Loading Tasks\nPlease wait&#8230;</string>
    <string name="projectTasksNone">No Tasks Found.\nPlease create a task.</string>
    <string name="createTaskName">Name</string>
    <string name="createTaskDescription">Description</string>
    <string name="createTaskButton">Submit</string>
    <string name="createTaskNotes">Notes</string>
    <string name="createTaskAssignTo">Assign To:</string>
    <string name="editTaskButton">Edit</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="editTaskName">Name</string>
    <string name="editTaskDescription">Description</string>
    <string name="editTaskNotes">Notes</string>
    <string name="updateTaskButton">Update</string>
    <string name="status">Status</string>
    <string name="notStarted">Not\nStarted</string>
    <string name="inProgress">In\nProgress</string>
    <string name="completed">Completed</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="hello_world">Hello world!</string>

</resources>
