<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/editProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/editProjectName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editProjectDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editProjectPassword"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editProjectPassword"
            android:ems="10"
            android:hint="@string/editProjectDescription"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editProjectDescription"
            android:layout_alignRight="@+id/editProjectDescription"
            android:layout_below="@+id/editProjectStatus"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/editProjectDueDateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="editDate"
                android:text="@string/editProjectDueDate" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/editProjectTimeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="editTime"
                android:text="@string/editProjectDueTime" />
        </LinearLayout>

        <Button
            android:id="@+id/editProjectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignRight="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:onClick="editProject"
            android:text="@string/editProjectButton" />

        <EditText
            android:id="@+id/editProjectPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editProjectName"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editProjectName"
            android:ems="10"
            android:hint="@string/editProjectPassword"
            android:inputType="textPassword" />

        <!--<EditText-->
            <!--android:id="@+id/editProjectUIDText"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@+id/editProjectName"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_below="@+id/editProjectName"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/editProjectUID" />-->



        <TextView
            android:id="@+id/projectStatus"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/editProjectDescription"
            android:layout_alignRight="@+id/editProjectDescription"
            android:layout_below="@+id/editProjectDescription"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="bottom"
            android:text="@string/status"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <View
            android:id="@+id/projectLineView"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/editProjectDescription"
            android:layout_below="@+id/projectStatus"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/editProjectStatus"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/editProjectDescription"
            android:layout_below="@+id/projectLineView"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/projectNotStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/notStarted"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/projectInProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inProgress"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/projectCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textSize="14sp" />
        </RadioGroup>
    </RelativeLayout>

</ScrollView>