<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity" >


    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextBox"
        android:layout_alignRight="@+id/emailTextBox"
        android:layout_below="@+id/emailTextBox"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" >

    </EditText>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTextBox"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/passwordTextBox"
        android:onClick="signIn"
        android:text="@string/signIn" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:onClick="newAccount"
        android:text="@string/createAccount"
        android:textColor="@color/sign_in_text_view_color"
        android:layout_above="@+id/forgotPasswordButton"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/createAccount"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:onClick="userForgotPassword"
        android:text="@string/forgotPassword"
        android:textColor="@color/sign_in_text_view_color" />

</RelativeLayout>
