<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="90"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/joinProjectUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/joinProjectUID"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/joinProjectPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinProjectUID"
        android:layout_alignRight="@+id/joinProjectUID"
        android:layout_below="@+id/joinProjectUID"
        android:hint="@string/joinProjectPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/joinProjectSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/joinProjectPassword"
        android:layout_alignRight="@+id/joinProjectPassword"
        android:layout_below="@+id/joinProjectPassword"
        android:text="@string/joinProjectSubmitButton" />

</RelativeLayout>