<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgotPasswordActivity" >

    <Button
        android:id="@+id/forgotPasswordSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forgotPasswordEmail"
        android:layout_alignRight="@+id/forgotPasswordEmail"
        android:layout_below="@+id/forgotPasswordEmail"
        android:text="@string/forgotPasswordSubmit" 
        android:onClick="onClickSubmit"/>

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forgotPasswordInstruction"
        android:layout_alignRight="@+id/forgotPasswordInstruction"
        android:layout_below="@+id/forgotPasswordInstruction"
        android:ems="10"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/forgotPasswordInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/enterEmailAddress" />

</RelativeLayout>
